# RAG_app

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
.github/workflows/: ci.yml
backend/: advanced_fine_tune.py  fine_tune.py  model_export.py  requirements.txt  setup_advanced_tuning.py  vector_database.py
src/: App.svelte  app.html  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: FineTunePanel.svelte  MonitorPanel.svelte  PlaygroundPanel.svelte  RagPanel.svelte
src/lib/: i18n.ts  theme.ts
src/routes/: +page.svelte
