[package]
name = "rag-app"
version = "0.1.0"
description = "Retrieval-Augmented Generation Desktop Application"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rag_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
pdf-extract = "0.7"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }

# Enhanced RAG features
csv = "1.3"
docx-rs = "0.4"
text-splitter = "0.13"
ndarray = "0.15"
linfa = "0.7"
linfa-clustering = "0.7"
hf-hub = { version = "0.3", features = ["tokio"] }
tokenizers = "0.19"
candle-core = { version = "0.4", optional = true }
candle-nn = { version = "0.4", optional = true }
faiss = { version = "0.12", optional = true }

# System monitoring
sysinfo = "0.30"
psutil = "3.2"
log = "0.4"
env_logger = "0.10"

[features]
default = ["local-embeddings"]
local-embeddings = ["candle-core", "candle-nn"]
faiss-db = ["faiss"]

